# green-agent

./: README.md  compose.yaml  pyproject.toml
src/: agent.py  server.py
tests/: test_agent.py
